--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "cross-env NODE_ENV==development nodemon ./src/main.js",
+    "dev": "cross-env NODE_ENV=development nodemon ./src/main.js",
     "start": "cross-env NODE_ENV=production node ./src/main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
